--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 lat: 21.269354,
                 long: 72.962955
             },
+            {
+                name: "Amroli",
+                lat: 21.009818,
+                long: 73.083076
+            },
         ];
 
         cities.forEach(city => {
